Win Native Notifications: Fix window activation.

This fixes the issue with window activation not functioning correctly
when notifications are activated while Chrome is running but in the
background.

Bug: 837796, 734095
Change-Id: I8eac14403850a13d60e7a50c3c795fed96205d7e
Reviewed-on: https://chromium-review.googlesource.com/1049984
Reviewed-by: Greg Thompson <grt@chromium.org>
Commit-Queue: Finnur Thorarinsson <finnur@chromium.org>
Cr-Commit-Position: refs/heads/master@{#556955}
Former-commit-id: 933cf169043979b8fc594877d0cfe20dbd6ffe27